# agents-core

./: Cargo.toml
src/: agent.rs  error.rs  history.rs  lib.rs  llm.rs  tool.rs  types.rs
src/providers/: mod.rs  openai.rs
