[package]
name = "panit-agents-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tracing-subscriber = "0.3"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "simple_tools"
path = "examples/simple_tools.rs"

[[example]]
name = "orchestrator"
path = "examples/orchestrator.rs"

[[example]]
name = "interactive"
path = "examples/interactive.rs"

[[example]]
name = "interactive_tools"
path = "examples/interactive_tools.rs"
